--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
 }
+
+/* h1 {
+  font-size: 2.3rem;
+}
+
+h2 {
+  font-size: 1.7rem;
+}
+
+p {
+  font-size: 1.1rem;
+} */
